Spec 2.3 - Implement related Logs
